--- a/public/stylesheets/MainStyle.css
+++ b/public/stylesheets/MainStyle.css
@@ -27,6 +27,7 @@
     max-width: 100vw;
     min-height: 1000px;
     max-height: 1500px;
+    background-color: #d8bd8b;
 }
 
 #grid-nav{
@@ -63,17 +64,17 @@
 
 #grid-main{
     display: flex;
-    width: 800px;
+    width: 1000px;
     flex-flow: column;
-    overflow-y: scroll;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     min-height: 1000px;
-    margin: 20px;
+    padding: 20px;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
+    overflow-y:scroll;
 }
-
 #grid-sidebar{
+    padding-top:20px;
     display: flex;
     flex-flow: column;
     overflow-y: scroll;
@@ -82,7 +83,9 @@
     min-height: 1000px;
     justify-content: flex-start;
     align-items: flex-start;
-    margin: 20px;
+    /* padding: 20px; */
+    border:1px solid black;
+    background-color:#f3f6c8;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -100,8 +103,14 @@
     width: 120px;
     height: 120px;
     object-fit: scale-down;
+    border:1px solid brown;
 }
-
+#grid-username{
+    font-family: Poppins-Regular;
+    font-size: 17px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+}
 #grid-post{
     display: flex;
     color: white;
@@ -133,17 +142,25 @@
     display: flex;
     flex-flow: column;
     min-width: 400px;
-    height: 400px;
+    height: 1000px;
+    align-items: center;
+    text-align: center;
 }
 #grid-friend>div>a{
     font-size: 0.8em;
 }
 
 #grid-advice{
+    margin-top:30px;
     display: flex;
     flex-flow: column;
-    min-width: 400px;
-    height: 400px;
+    width: 385px;
+    height: 600px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #ece493;
+    border:5px solid grey;
 }
 #grid-advice>div>a{
     font-size: 0.8em;
@@ -218,12 +235,14 @@
 /* The style of the posted items */
 .element{
     display:flex;
+    border: 3px ridge #d8bd8b;
+    border-radius:10px;
     flex-flow:column;
     justify-content:space-evenly;
+    align-items: center;
     width:750px;
     margin:30px 25px 30px 25px;
-    border:2px ridge gray;
-    border-radius:10px;
+    background-color: ivory;
 }
 .title{
     display:flex;
@@ -239,11 +258,16 @@
 }
 .person-icon{
    display:flex;
-    width:50px;
-    height:50px;
+    width:70px;
+    height:70px;
 }
 .person-name{
-    display: flex;
+    font-family: Poppins-Regular;
+    font-size: 15px;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    text-align: center;
+    width: 100%;
 }
 .post-time{
     display:flex;
@@ -253,15 +277,15 @@
 .content{
     display:flex;
     flex-flow:row;
-    width:700px;
+    width:600px;
     margin:10px 25px 10px 25px;
-    justify-content:space-evenly;
 }
 .content > img{
     display:flex;
     width:60%;
 }
 .content > p{
+    margin-left: 50px;
     display:flex;
 }
 .tail{
@@ -408,34 +432,34 @@ div.dropdown-row>a.dropdown-item{
     text-align: right;
 }
 .friendbtn{
-    height:50px;
-    width:280px;
+    height:30px;
+    width:150px;
     border-radius:10px;
     border:2px solid #046953;
 }
 #following-container{
-    margin-top:5%;
-    margin-right: 3%;
-    height:125px;
-    width: 300px;
+    padding-top:5px;
+    height:300px;
+    width: 190px;
     display: flex;
     flex-direction: column;
-    background-color: #dde2e1;
+    background-color: #ece493;
     overflow-y:scroll;
+    align-items:center;
 }
 #follower-container{
-    margin-top:5%;
-    margin-right: 5%;
-    height:125px;
-    width: 300px;
+    padding-top:5px;
+    height:300px;
+    width: 190px;
     display: flex;
     flex-direction: column;
-    background-color: #dde2e1;
+    background-color: #ece493;
     overflow-y:scroll;
+    align-items:center;
 }
 .su-container{
     height:200px;
-    width:200px;
+    width:360px;
     display:flex;
     flex-direction: column;
     align-content: center;
@@ -444,11 +468,11 @@ div.dropdown-row>a.dropdown-item{
 #suggests{
     margin-top:2%;
     padding-top:10px;
-    width:300px;
+    width:375px;
+    height:500px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color:white;
     overflow-y:scroll;
 }
 .search-btn{
@@ -456,4 +480,15 @@ div.dropdown-row>a.dropdown-item{
     width:100px;
     border-radius:10px;
     border:2px solid #046953;
+}
+
+#friendlist{
+    margin-top:30px;
+    height:330px;
+    width: 385px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border:5px solid grey;
+
 }
