--- a/views/FriendList.html
+++ b/views/FriendList.html
@@ -6,7 +6,7 @@
          
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -41,13 +41,15 @@
                         </div>
                     </div>
             </nav>
-        
+        <div id="main-container">
         <div id="search-container" ng-controller="searchController">
             <div id="search-label">FIND NEW FRIENDS HERE:</div>
             <input type="text" id="search-input" ng-model="searchname" placeholder="SEARCH OTHER USERS">
-            <button type="submit" id="search-btn" ng-click="searchUser()">Search</button>
+            <button type="submit" class="search-btn" ng-click="searchUser()">Search</button>
         </div>
-        <div id="friendlist" ng-controller="friendlistController">
+        <center><span id="search-label" style="font-size:30px">SEE YOUR FRIENDS HERE! </span></center>
+        <div id="users-container">   
+         <div id="friendlist" ng-controller="friendlistController">
         <div id="following-box">
             <div id="following-label">
                 F<br>O<br>L<br>L<br>O<br>W<br>I<br>N<br>G
@@ -55,7 +57,9 @@
             <div id="following-container">
                 <table class="friendlist-table">
                     <tr ng-repeat="f1 in following">
-                        <td><button type="button" class="friendbtn" ng-click="goProfile(f1.follow_guest)">{{f1.follow_guest}}</button></td>
+                        <td><button type="button" class="friendbtn" ng-click="goProfile(f1.follow_guest)">
+                            <span class="smicon"><img style="height:40px; width:40px" class="person-icon" ng-src="{{f1.icon}}"/><span class="person-name">{{f1.follow_guest}}</span></span>
+                        </button></td>
                     </tr>
                   </table>
             </div>
@@ -67,23 +71,30 @@
                 <div id="follower-container">
                     <table class="friendlist-table">
                         <tr ng-repeat="f2 in follower">
-                            <td><button type="button" class="friendbtn" ng-click="goProfile(f2.follow_host)">{{f2.follow_host}}</button></td>
+                                <td><button type="button" class="friendbtn" ng-click="goProfile(f2.follow_host)">
+                                    <span class="smicon"><img style="height:40px; width:40px" class="person-icon" ng-src="{{f2.icon}}"/><span class="person-name">{{f2.follow_host}}</span></span>
+                                </button></td>
                         </tr>
                       </table>
                 </div>
         </div>
-        </div>
+        
         <div id="suggests" ng-controller="suggestController">
-            <div id="suggests-label">Suggest For You: </div>
-            <div id="suggest-users">
-                <div class="su-container" ng-repeat="sf in suggest">
-                    <img ng-src="{{sf.icon}}">
-                    <p id="suggest-username">{{sf.username}}</p>      
-                    <button type="submit" class="search-btn" ng-click="followUser({event:$event})">Follow</button>
-                </div>
-            </div>
+            <div id="suggests-label">S<br>U<br>G<br>G<br>E<br>S<br>T </div>
+                <table class="suggest-table">
+                    <tr ng-repeat="sf in suggest" >
+                        <td><button type="button" class="friendbtn"  ng-click="goProfile(sf.username)">
+                            <span class="smicon"><img style="height:40px; width:40px" class="person-icon" ng-src="{{sf.icon}}"><span id="suggest-username">{{sf.username}}</span>
+                            </span>
+                        </button></td>
+                        <td><button type="submit" class="search-btn" ng-click="followUser({event:$event})">Follow</button></td>
+                        </tr>
+                </table> 
         </div>
+    </div>
         </div>
+    </div>
+</div>
     </body>
     <script src="/javascripts/StaticPage.js"></script>
     <script src="/javascripts/DynamicController.js" type="text/javascript"></script>
