--- a/views/MainPage.html
+++ b/views/MainPage.html
@@ -6,7 +6,7 @@
     
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.js"></script>
         <script src="https://rawgit.com/ghostbar/angular-file-model/master/angular-file-model.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-sanitize.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -46,6 +46,8 @@
         <div id="grid-container" ng-controller="readController" >
             <!-- Activity screen -->
             <div id="grid-main">
+                <span style="font-family: Poppins-Regular;font-size:30px;line-height: 1.2;
+                letter-spacing: 1px;">WATCH THE FUN FROM YOUR FRIENDS HERE! </span>
                 <div class="element" ng-repeat="x in injectAll">
                     <p class="inline_id" style="display: none;">{{x.post_id}}</p>
                     <div class="title">
@@ -108,22 +110,16 @@
                         <p>Post Your Life !</p>
                     </a>
                 </div>
-    
                 <!-- Friend list of current user, displays part of all friends -->
                 <div id="grid-friend">
-                    <div id="friend-table">
-                        Latest updates of your friends
-                        <ul>
-    
-                        </ul>
-                    </div>
                     <div>
                         <a class="btn btn-info btn-lg">
                             <i class="fa fa-search"></i> Go to your friend list
                         </a>
                     </div>
+                    <div id='friendlist'>
                     <div id="follower-container">
-                        <span>Followers</span>
+                        <span style="font-family: Poppins-Regular;">Followers</span>
                     <table class="friendlist-table">
                             <tr ng-repeat="f2 in follower">
                                 <td><button type="button" class="friendbtn" ng-click="goProfile(f2.follow_host)">{{f2.follow_host}}</button></td>
@@ -131,7 +127,7 @@
                           </table>
                     </div>
                     <div id="following-container">
-                        <span>Followings</span>
+                            <span style="font-family: Poppins-Regular;">Followings</span>
                         <table class="friendlist-table">
                             <tr ng-repeat="f1 in following">
                                 <td><button type="button" class="friendbtn" ng-click="goProfile(f1.follow_guest)">{{f1.follow_guest}}</button></td>
@@ -139,16 +135,10 @@
                           </table>
                     </div>
                 </div>
+                
 
-    
                 <!-- Suggestions of new friends, display part of all suggestions -->
                 <div id="grid-advice">
-                    <div id="advice-table">
-                        See more...
-                        <ul>
-    
-                        </ul>
-                    </div>
                     <div>
                         <a class="btn btn-info btn-lg">
                             <i class="fa fa-plus-square"></i> Meet new people
@@ -164,6 +154,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
 
@@ -248,7 +239,7 @@
                         </div>
                         <div id="preview-area">
                             <img id="preview-image"/>
-                            <p id="preview-text" ng-bind-html="outtxt  | emoji"></p>
+                            <p id="preview-text" ng-bind-html="outtxt | emoji"></p>
                         </div>
                     </div>
                     <div class="modal-footer" id="post-footer">
